--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pensamento Computacional",
+  "name": "Curso sobre Pensamento Computacional - UFRGS",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": ".",
+  "start_url": "http://hmg.labtime.ufg.br/ava-mec-ws/instituicao/ufrgs/conteudo/modulo/1601/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
