Implementação: acrescetada função para não permitir o embaralhamento e des-seleção de itens respondidos corretamente

--- a/public/configuracao_conteudo.json
+++ b/public/configuracao_conteudo.json
@@ -250,7 +250,7 @@
                 "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q1_a1_abstracai",
+                        "identificador": "q1_a1_abstracao",
                         "enunciado": "Considere a organização de uma biblioteca e indique o que lhe parece ser uma abstração mais conveniente para falar de livros: ",
                         "gabaritos": [
                             {
