--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react-dom": "^16.7.0",
     "react-hamburger-menu": "^1.1.1",
     "react-hammerjs": "^1.0.1",
+    "react-html-parser": "^2.0.2",
     "react-motion": "^0.5.2",
     "react-motion-drawer": "^3.1.0",
     "react-paginate": "^6.2.1",
-    "react-scripts": "^2.1.5",
-    "react-select": "^2.3.0"
+    "react-scripts": "^2.1.8",
+    "react-select": "^2.3.0",
+    "react-youtube": "^7.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
