--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-html-parser": "^2.0.2",
     "react-paginate": "^6.2.1",
     "react-scripts": "^2.1.8",
+    "react-toastify": "^5.0.0-rc.3",
     "react-youtube": "^7.9.0"
   },
   "scripts": {
